<resources>
    <string name="app_name">Facebook</string>
    <string name="facebook_email_hint">Email or Phone</string>
    <string name="password_hint">Password</string>
    <string name="facebook_login_button">LOG IN</string>
    <string name="facebook_logo">facebook logo</string>
    <string name="facebook_language_current">English</string>
    <string name="facebook_language_changer">Change</string>
    <string name="facebook_signup">Sign Up for Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="help">help</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_hint_username">Username</string>
    <string name="instagram_login_button">Log In</string>
    <string name="instagram_forgot_password">Forgot your login details?</string>
    <string name="instagram_help_signing_in">Get help signing in.</string>
    <string name="instagram_log_in_with_facebook">Log in with Facebook</string>
    <string name="instagram_don_t_have_an_account">Don\'t have an account?</string>
    <string name="instagram_sign_up">Sign up.</string>
</resources>