<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebook_blue"
    tools:context=".MainActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/facebook_logo"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/facebook_logo"
            android:src="@drawable/facebook"
            />
        <RelativeLayout
            android:id="@+id/language_changer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facebook_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/current_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/language_dot"
                android:text="@string/facebook_language_current"
                android:textColor="@color/facebook_light_white"
                />
            <ImageView
                android:id="@+id/language_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/circle"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:id="@+id/language_change_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/language_dot"
                android:text="@string/facebook_language_changer"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>
        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/language_changer"
            android:layout_marginTop="40dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@android:color/white"
            android:hint="@string/facebook_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@color/facebook_light_white"
            />
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/email_input"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@android:color/white"
            android:hint='@string/password_hint'
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/facebook_light_white"
            />
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_input"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/button_white"
            android:text="@string/facebook_login_button"
            android:textColor="@color/facebook_light_white"
            app:cornerRadius='4dp'
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/login_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:layout_marginBottom="40dp"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/sign_up_for_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/facebook_signup"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            />
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_for_facebook"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="@id/login_footer"
        app:layout_constraintEnd_toEndOf="@id/login_footer"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:contentDescription="@string/help"
            android:src="@drawable/question_mark"
            />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
