<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/instagram_gradient"
    tools:context=".LoginActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/instagram_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/instagram"
            android:src="@drawable/instagram"
            />
        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/instagram_title"
            android:layout_marginTop="40dp"
            android:autofillHints="emailAddress"
            android:background="@color/instagram_light_white"
            android:backgroundTint="@android:color/white"
            android:hint="@string/instagram_hint_username"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/facebook_light_white"
            />
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/email_input"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:background="@color/instagram_light_white"
            android:backgroundTint="@android:color/white"
            android:hint='@string/password_hint'
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/facebook_light_white"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_input"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:paddingVertical="16dp"
            android:text="@string/instagram_login_button"
            android:textColor="@color/instagram_button_white"
            app:cornerRadius="4dp"
            app:strokeColor="@color/instagram_button_white"
            app:strokeWidth="1.5dp"

            />
        <RelativeLayout
            android:id="@+id/forgot_password_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            >
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instagram_forgot_password"
                android:textAlignment="center"
                android:textColor="#CCFFFFFF"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/forgot_password"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/forgot_password"
                android:text="@string/instagram_help_signing_in"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_password_wrapper"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            >
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:layout_toStartOf="@+id/or_divider"
                app:dividerColor="#44FFFFFF"
                />
            <TextView
                android:id="@+id/or_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingHorizontal="8dp"
                android:text="OR"
                android:textColor="@android:color/white"
                tools:ignore="HardcodedText"
                />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/or_divider"
                app:dividerColor="#44FFFFFF"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/login_with_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            >
            <ImageView
                android:id="@+id/login_with_facebook_logo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/instagram"
                android:src="@drawable/instagram_facebook"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/login_with_facebook_logo"
                android:text="@string/instagram_log_in_with_facebook"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blur"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#44FFFFFF"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingVertical="16dp"
            >
            <TextView
                android:id="@+id/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instagram_don_t_have_an_account"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/no_account"
                android:text="@string/instagram_sign_up"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
